[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/MainScreen.gd" type="Script" id=1]
[ext_resource path="res://UI/ScrollingBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://Winchester/buttontheme.tres" type="Theme" id=3]
[ext_resource path="res://Winchester/arrowtheme.tres" type="Theme" id=4]
[ext_resource path="res://Winchester/font.tres" type="DynamicFont" id=5]
[ext_resource path="res://Untitled_drawing_4.png" type="Texture" id=6]
[ext_resource path="res://UI/ForwardButton.tscn" type="PackedScene" id=7]

[node name="MainScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" parent="." instance=ExtResource( 2 )]

[node name="ForwardButton" parent="Node2D" instance=ExtResource( 7 )]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 292.215, 343.887 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 292.215, 666.392 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )

[node name="Button" type="Button" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -42.251
theme = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Refresh"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentClass" type="VBoxContainer" parent="."]
margin_left = 194.0
margin_top = 240.0
margin_right = 378.0
margin_bottom = 348.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CurrentClass"]
margin_right = 184.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Right now Is:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Event" type="Label" parent="CurrentClass"]
margin_top = 40.0
margin_right = 184.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Event2" type="Label" parent="CurrentClass"]
margin_top = 80.0
margin_right = 184.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Event3" type="Label" parent="CurrentClass"]
margin_top = 120.0
margin_right = 184.0
margin_bottom = 156.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextClass" type="VBoxContainer" parent="."]
margin_left = 194.0
margin_top = 560.0
margin_right = 378.0
margin_bottom = 656.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="NextClass"]
margin_right = 184.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Next Class:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Event4" type="Label" parent="NextClass"]
margin_top = 40.0
margin_right = 184.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Event5" type="Label" parent="NextClass"]
margin_top = 80.0
margin_right = 184.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
margin_right = 80.0
margin_bottom = 80.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Node2D/ForwardButton" to="." method="_on_ForwardButton_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
